--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -1,16 +1,16 @@
 ############################# About ###################################
 about:
   enable : true
-  title : About Us
+  title : About Inside Airbnb App
   about_item :
-  - icon : ti-ruler-pencil # themify icon pack : https://themify.me/themify-icons
-    title : We're Creative
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
+  - icon : ti-text # themify icon pack : https://themify.me/themify-icons
+    title : Text Mining
+    content : xx
 
-  - icon : ti-cup # themify icon pack : https://themify.me/themify-icons
-    title : We're Professional
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
+  - icon : ti-bar-chart # themify icon pack : https://themify.me/themify-icons
+    title : Exploratory Analytics
+    content : xx
 
-  - icon : ti-thought # themify icon pack : https://themify.me/themify-icons
-    title : We're Genius
-    content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
+  - icon : ti-stats-up # themify icon pack : https://themify.me/themify-icons
+    title : Predictive Analytics
+    content : xx
