--- a/exampleSite/data/en/banner.yml
+++ b/exampleSite/data/en/banner.yml
@@ -1,12 +1,12 @@
 ############################### Banner ################################
 banner:
   enable : true
-  bg_image_webp : "images/backgrounds/hero-area.webp"
-  bg_image : "images/backgrounds/hero-area.jpg"
+  bg_image_webp : "images/backgrounds/background.webp"
+  bg_image : "images/backgrounds/background.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
-  title : "Experience the new reality"
-  content : "Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!"
+  title : "Inside Airbnb"
+  content : "An Interactive App for analysing Airbnb data using Text, Exploratory and Predictive Analytics."
   button:
-    enable : true
+    enable : false
     label : "Explore Us"
     link : "#services"
