--- a/exampleSite/data/en/team.yml
+++ b/exampleSite/data/en/team.yml
@@ -4,65 +4,46 @@ team:
   title : Our Team
   team_member :
     # team member loop
-    - name : Abul Mal Muhit
+    - name : Su Yiin Ang
       image_webp : images/team/team-1.webp
       image : images/team/team-1.jpg
-      designation : CEO/Founder
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+      designation : 
+      content : Currently a post-graduate student pursuing a Master of IT in Business (Analytics) at Singapore Management University. Before venturing into the world of analytics, I spent 6 years in the audit and financial due diligence departments at PwC Singapore.
       social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+        - icon : ti-user # themify icon pack : https://themify.me/themify-icons
+          link : "https://suyiinang.netlify.app/"
         - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+          link : "https://www.linkedin.com/in/suyiinang/"
+        - icon : ti-github # themify icon pack : https://themify.me/themify-icons
+          link : "https://github.com/suyiinang"
+        - icon : ti-bar-chart-alt # themify icon pack : https://themify.me/themify-icons
+          link : "https://public.tableau.com/profile/suyiinang#!/"
         
     # team member loop
-    - name : Frank Miller
+    - name : Joey Chua
       image_webp : images/team/team-2.webp
       image : images/team/team-2.jpg
-      designation : Manager
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+      designation : 
+      content : Write up
       social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+        - icon : ti-user # themify icon pack : https://themify.me/themify-icons
+          link : "https://joeychua.netlify.app/"
         - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+          link : "https://www.linkedin.com/in/joeychuasm/"
+        - icon : ti-bar-chart-alt # themify icon pack : https://themify.me/themify-icons
+          link : "https://public.tableau.com/profile/joey.chua2685#!/"
         
     # team member loop
-    - name : Michael Jonson
+    - name : Kevin Gunawan Albindo
       image_webp : images/team/team-3.webp
       image : images/team/team-3.jpg
-      designation : Web Developer
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
+      designation : 
+      content : Write up
       social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+        - icon : ti-user # themify icon pack : https://themify.me/themify-icons
+          link : "https://kgalbindo.netlify.app/"
         - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
+          link : "https://www.linkedin.com/in/kgalbindo/"
+        - icon : ti-bar-chart-alt # themify icon pack : https://themify.me/themify-icons
+          link : "https://public.tableau.com/profile/kevin.gunawan.albindo#!/"
         
-    # team member loop
-    - name : Mo. Kha. Alamgir
-      image_webp : images/team/team-4.webp
-      image : images/team/team-4.jpg
-      designation : SEO Specialist
-      content : Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.
-      social :
-        - icon : ti-facebook # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-twitter-alt # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-linkedin # themify icon pack : https://themify.me/themify-icons
-          link : "#"
-        - icon : ti-dribbble # themify icon pack : https://themify.me/themify-icons
-          link : "#"
